--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light p-3" id="menu">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./imagenes/eab-logo.jpg" height="40" width="45" alt="eab"></a>
+          <a class="navbar-brand" href="#"><img src="eab-logo.jpg" height="40" width="45" alt="eab"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,13 +54,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="3000">
-        <img src="./imagenes/Cataratas.jpg" class="d-block w-100" alt="punta-cana">
+        <img src="Cataratas.jpg" class="d-block w-100" alt="punta-cana">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="./imagenes/villa carlos paz.jpg" class="d-block w-100" alt="villa-cp">
+        <img src="villa carlos paz.jpg" class="d-block w-100" alt="villa-cp">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="./imagenes/Disney.jpg" class="d-block w-100" alt="lugares">
+        <img src="Disney.jpg" class="d-block w-100" alt="lugares">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -86,14 +86,14 @@
 <section class="container-fluid">
     <div class="row w-75 mx-auto my-5 servicio-fila">
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-            <img src="./imagenes/Icono viajes.jpg" alt="viajes" width="180" height="160">
+            <img src="Icono viajes.jpg" alt="viajes" width="180" height="160">
             <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1">Destinos</h3>
                 <p class="px-4">Tenemos viajes por todo el mundo</p>
             </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-            <img src="./imagenes/Icono culturas.png" alt="culuras" width="180" height="160">
+            <img src="Icono culturas.png" alt="culuras" width="180" height="160">
             <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1">Culturas</h3>
                 <p class="px-4">Vamos a conocer las diferentes culturas!</p>
@@ -102,14 +102,14 @@
     </div>
     <div class="row w-75 mx-auto my-5 servicio-fila">
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-            <img src="./imagenes/Icono aviones.jpg" alt="aviones" width="180" height="160">
+            <img src="Icono aviones.jpg" alt="aviones" width="180" height="160">
             <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1">Aéreo</h3>
                 <p class="px-4">Disponemos de excelentes aerolineas</p>
             </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-            <img src="./imagenes/Icono barcos.jpg" alt="barcos" width="180" height="160">
+            <img src="Icono barcos.jpg" alt="barcos" width="180" height="160">
             <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1">Océano</h3>
                 <p class="px-4">Disponemos de excelentes puertos</p>
@@ -126,7 +126,7 @@
         <p class="fs-4">Nuestro objetivo es hacerte conocer y recorrer todo el mundo con buenos precios y mucha diversión</p>
     </div>
     <div class="text-center">
-        <img class="img-fluid" src="./imagenes/Equipo.png" alt="equipo">
+        <img class="img-fluid" src="Equipo.png" alt="equipo">
     </div>
 
     <div id="local" class="border-top border-2">
